ikiwiki (3.20130505) UNRELEASED; urgency=low

  * Fix test suite to not fail when XML::Twig is not installed.
    Closes: #707436

 -- Joey Hess <joeyh@debian.org>  Thu, 09 May 2013 10:47:18 -0400

ikiwiki (3.20130504) unstable; urgency=low

  * Allow dots in directive parameter names. (tango)
  * Add missing plugin section, and deal with missing sections with a warning.
  * Detect plugins with a broken getsetup and warn.
  * map: Correct reversion introduced in version 3.20110225 that could
    generate invalid html. (smcv)
  * Makefile.PL: overwrite theme style.css instead of appending
    (Thanks, Mikko Rapeli)
  * meta: Fix anchors used to link to the page's license and copyright.
    Closes: #706437

 -- Joey Hess <joeyh@debian.org>  Sat, 04 May 2013 23:47:21 -0400

ikiwiki (3.20130212) unstable; urgency=low

  * htmlscrubber: Allow the bitcoin URI scheme.
  * htmlscrubber: Allow the URI schemes of major VCS's.
  * aggregate: When run with --aggregate, if an aggregation is already
    running, don't go on and --refresh.
  * trail: Avoid excess dependencies between pages in the trail
    and the page defining the trail. Thanks, smcv.
  * opendiscussion: Don't allow editing discussion pages if discussion pages
    are disabled. (smcv)
  * poll: Add expandable option to allow users to easily add new choices to
    a poll.
  * trail: Avoid massive slowdown caused by pagetemplate hook when displaying
    dynamic cgi pages, which cannot use trail anyway.
  * Deal with empty diffurl in configuration.
  * cvs: Various fixes. (schmonz)
  * highlight: Now adds a span with class highlight-<extension> around
    highlighted content, allowing for language-specific css styling.

 -- Joey Hess <joeyh@debian.org>  Tue, 12 Feb 2013 21:48:02 -0400

ikiwiki (3.20121212) unstable; urgency=low

  * filecheck: Fix bug that prevented File::MimeInfo::Magic from ever
    being used.
  * openid: Display openid in Preferences page as a comment, so it can be
    selected in all browsers.