@@ -2,6 +2,8 @@ ikiwiki (3.20130505) UNRELEASED; urgency=low
 
   * Fix test suite to not fail when XML::Twig is not installed.
     Closes: #707436
+  * theme: Now <TMPL_IF THEME_$NAME> can be used in all templates when
+    a theme is enabled.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 09 May 2013 10:47:18 -0400
 
